
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {double* H; } ;


 TYPE_1__ acadoWorkspace ;

void acado_zeroBlockH00( )
{
acadoWorkspace.H[0] = 0.0000000000000000e+00;
acadoWorkspace.H[1] = 0.0000000000000000e+00;
acadoWorkspace.H[2] = 0.0000000000000000e+00;
acadoWorkspace.H[23] = 0.0000000000000000e+00;
acadoWorkspace.H[24] = 0.0000000000000000e+00;
acadoWorkspace.H[25] = 0.0000000000000000e+00;
acadoWorkspace.H[46] = 0.0000000000000000e+00;
acadoWorkspace.H[47] = 0.0000000000000000e+00;
acadoWorkspace.H[48] = 0.0000000000000000e+00;
}
